[package]
name = "pasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
bb8 = "0.7"
bb8-redis = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
redis = { version = "0.21", features = ["default", "aio", "tokio-comp"] }
thiserror = "1.0"
tokio = { version = "1.16", features = ["full"] }
